welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:4: error: not found: value k
while  (m<nums.length && value != nums(k)){
                                       ^indexOfValue:5: error: not found: value k
 if (value == nums(k)) {i = k}
                   ^indexOfValue:5: error: not found: value k
 if (value == nums(k)) {i = k}
                            ^