welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,value:Int): Int = {
var i:Int = -1
var m:Int = 0
while  (m<nums.length && value != nums(k)){
 if (value == nums(k)) {i = k}
 m=m+1	
}
return i} 
